--- a/examples/languages.html
+++ b/examples/languages.html
@@ -111,6 +111,10 @@
                     <label class="form-check-label" for="lang-select-en">English</label>
                 </div>
                 <div class="form-check">
+                    <input type="radio" class="form-check-input" id="lang-select-et" value="et" autocomplete="off" name="lang-select" onclick="toggleLanguage();">
+                    <label class="form-check-label" for="lang-select-et">Estonian</label>
+                </div>
+                <div class="form-check">
                     <input type="radio" class="form-check-input" id="lang-select-hr" value="hr" autocomplete="off" name="lang-select" onclick="toggleLanguage();">
                     <label class="form-check-label" for="lang-select-hr">Croatian</label>
                 </div>
